dhall/tests/type-inference/failure/unit/AssertAlphaTrap.txt
Type error: error: unbound variable ``_``
 --> <current file>:1:46
  |
1 | assert : (\(_: Bool) -> _) === (\(x: Bool) -> _)
  |                                               ^ not found in this scope
  |
